--- a/package.json
+++ b/package.json
@@ -23,6 +23,9 @@
     "infinite-scroll": "^3.0.5",
     "lodash": "^4.17.15",
     "markdown-it-anchor": "^5.0.2",
+    "markdown-it-imsize": "^2.0.1",
+    "markdown-it-task-lists": "^2.1.1",
+    "markdown-it-video": "^0.6.3",
     "preact": "^8.4.2",
     "svgxuse": "^1.2.6"
   },
@@ -51,6 +54,7 @@
     "html-entities": "^1.2.1",
     "html-minifier": "^3.5.20",
     "luxon": "^1.8.2",
+    "markdown-it-emoji": "^1.4.0",
     "netlify-lambda": "^1.1.1",
     "node-fetch": "^2.3.0",
     "require-dir": "^1.2.0",
