--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ndo.dev",
-  "version": "0.1.0",
+  "version": "1.0.0",
   "description": "Personal Website of Nico Domino",
   "scripts": {
     "start": "gulp build:dev && npm run serve",
@@ -10,7 +10,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "http://github.com/ndom91/mxb"
+    "url": "http://github.com/ndom91/home2019"
   },
   "author": "Nico Domino",
   "license": "MIT",
@@ -26,6 +26,7 @@
     "markdown-it-imsize": "^2.0.1",
     "markdown-it-task-lists": "^2.1.1",
     "markdown-it-video": "^0.6.3",
+    "markdown-it-emoji": "^1.4.0",
     "preact": "^8.4.2",
     "svgxuse": "^1.2.6"
   },
@@ -54,7 +55,6 @@
     "html-entities": "^1.2.1",
     "html-minifier": "^3.5.20",
     "luxon": "^1.8.2",
-    "markdown-it-emoji": "^1.4.0",
     "netlify-lambda": "^1.1.1",
     "node-fetch": "^2.3.0",
     "require-dir": "^1.2.0",
