--- a/netlify.toml
+++ b/netlify.toml
@@ -4,6 +4,7 @@
     functions = "functions"
 
 [build.environment]
+    NODE_ENV = "production"
     NODE_VERSION = "10.15"
     YARN_VERSION = "1.16.0"
 
