--- a/package.json
+++ b/package.json
@@ -22,21 +22,21 @@
     "focus-visible": "^4.1.5",
     "infinite-scroll": "^3.0.5",
     "lodash": "^4.17.15",
-    "markdown-it-anchor": "^5.0.2",
+    "markdown-it-anchor": "^5.2.5",
+    "markdown-it-emoji": "^1.4.0",
     "markdown-it-imsize": "^2.0.1",
     "markdown-it-task-lists": "^2.1.1",
     "markdown-it-video": "^0.6.3",
-    "markdown-it-emoji": "^1.4.0",
     "preact": "^8.4.2",
     "svgxuse": "^1.2.6"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^0.9.0-beta.3",
+    "@11ty/eleventy": "^0.9.0",
     "@11ty/eleventy-plugin-rss": "^1.0.3",
     "@11ty/eleventy-plugin-syntaxhighlight": "^2.0.0",
-    "@babel/core": "^7.2.0",
+    "@babel/core": "^7.6.4",
     "@babel/plugin-transform-react-jsx": "^7.2.0",
-    "@babel/preset-env": "^7.2.0",
+    "@babel/preset-env": "^7.6.3",
     "babel-loader": "^8.0.4",
     "browser-sync": "^2.26.3",
     "critical": "^1.3.4",
@@ -54,7 +54,7 @@
     "gulp-uglify": "^3.0.1",
     "html-entities": "^1.2.1",
     "html-minifier": "^3.5.20",
-    "luxon": "^1.8.2",
+    "luxon": "^1.19.3",
     "netlify-lambda": "^1.1.1",
     "node-fetch": "^2.3.0",
     "require-dir": "^1.2.0",
@@ -62,7 +62,7 @@
     "twitter": "^1.7.1",
     "webpack-stream": "^4.0.3",
     "workbox-build": "^3.6.3",
-    "yarn": "^1.17.3"
+    "yarn": "^1.19.1"
   },
   "resolutions": {
     "**/**/axios": "^0.19.0"
