--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -5,6 +5,11 @@
       "image": "/assets/images/screenshots/vacationnewtelco.png",
       "desc": "Company Vacation application for making, approving, auditing, and checking up on vacation requests."
     },{
+      "name": "Network Maintenance - Next.js",
+      "url": "https://github.com/ndom91/next-maintenance",
+      "image": "/assets/images/screenshots/maintenance_new.png",
+      "desc": "Application for managing, organizing, and auditing Network Maintenance requests, including forwarding notices onto customers - rewrite with Next.js / React"
+    },{
       "name": "Youtube Playlists",
       "url": "https://github.com/ndom91/youtube-playlists",
       "image": "/assets/images/screenshots/youtube.png",
