--- a/package.json
+++ b/package.json
@@ -61,8 +61,7 @@
     "sanitize-html": "^1.20.0",
     "twitter": "^1.7.1",
     "webpack-stream": "^4.0.3",
-    "workbox-build": "^3.6.3",
-    "yarn": "^1.19.1"
+    "workbox-build": "^3.6.3"
   },
   "resolutions": {
     "**/**/axios": "^0.19.0"
