--- a/package.json
+++ b/package.json
@@ -27,19 +27,19 @@
     "markdown-it-imsize": "^2.0.1",
     "markdown-it-task-lists": "^2.1.1",
     "markdown-it-video": "^0.6.3",
-    "preact": "^8.4.2",
+    "preact": "^8.5.3",
     "svgxuse": "^1.2.6"
   },
   "devDependencies": {
-    "@11ty/eleventy": "^0.9.0-beta.3",
+    "@11ty/eleventy": "^0.9.0",
     "@11ty/eleventy-plugin-rss": "^1.0.3",
     "@11ty/eleventy-plugin-syntaxhighlight": "^2.0.0",
-    "@babel/core": "^7.2.0",
-    "@babel/plugin-transform-react-jsx": "^7.2.0",
-    "@babel/preset-env": "^7.2.0",
+    "@babel/core": "^7.7.7",
+    "@babel/plugin-transform-react-jsx": "^7.7.7",
+    "@babel/preset-env": "^7.7.7",
     "babel-loader": "^8.0.4",
     "browser-sync": "^2.26.3",
-    "critical": "^1.3.4",
+    "critical": "^1.3.9",
     "del": "^3.0.0",
     "dotenv": "^6.2.0",
     "encoding": "^0.1.12",
