--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "not dead"
   ],
   "dependencies": {
+    "@typescript-eslint/parser": "^2.20.0",
     "focus-visible": "^4.1.5",
     "infinite-scroll": "^3.0.5",
     "lodash": "^4.17.15",
@@ -29,8 +30,7 @@
     "markdown-it-task-lists": "^2.1.1",
     "markdown-it-video": "^0.6.3",
     "preact": "^8.5.3",
-    "svgxuse": "^1.2.6",
-    "typescript-eslint-parser": "^22.0.0"
+    "svgxuse": "^1.2.6"
   },
   "devDependencies": {
     "@11ty/eleventy": "^0.9.0",
