--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   ],
   "dependencies": {
     "@typescript-eslint/parser": "^2.20.0",
+    "dependency-tree": "^7.2.0",
     "focus-visible": "^4.1.5",
     "infinite-scroll": "^3.0.5",
     "lodash": "^4.17.15",
